--- a/views/profile.pug
+++ b/views/profile.pug
@@ -51,7 +51,7 @@ block extra_scripts
                     }
                     if (prefs[i].type === 'email'){
                         if (prefs[i].value!=="" && isValidEmail(prefs[i].value)===false){
-                            alert(`Please input valid email for the ${prefs[i]}`);
+                            alert(`Please input valid email for the ${prefs[i].name}`);
                         } 
                         data[prefs[i].id]=prefs[i].value;
                     }
